--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "grunt": "^1.4.0",
+    "grunt-aws-s3": "^2.0.2"
   }
 }
