--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/huang-pei-mei/mkk-proxy#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
     "nodemon": "^2.0.7"
