--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.16.0",
     "axios": "^0.21.1",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
     "nodemon": "^2.0.7"
