--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@aws-sdk/client-s3": "^3.16.0",
     "axios": "^0.21.1",
     "compression": "^1.7.4",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
+    "newrelic": "^8.0.0",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
